[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10.11"
name = "sampler_qa_checks_demo"
version = "0.1"
dependencies = [
    "pyyaml>=6.0",
    "pyodbc>=5.2",
    "Hilltop>=7.0",
]

[project.entry-points.'hilltop.sampler_qa_checks']
"sampler_qa_checks_demo" = 'sampler_qa_checks_demo:SamplerQAChecksPluginDemo'